# chargepal_cvpd

./: .gitignore  .mypy.ini  LICENSE  README.md  pyproject.toml
cvpd/: __init__.py  core.py  utilities.py
cvpd/config/: _aruco_types.py  config.py  config_aruco_marker.py  config_aruco_pattern.py  config_charuco.py  config_offset.py  config_preproc.py
cvpd/detector/: detector.py  detector_abc.py  detector_aruco_marker.py  detector_aruco_pattern.py  detector_charuco.py  helper.py
cvpd/geo_pattern/: aruco_marker.py  charuco_board.py  pattern_aruco_marker.py  pattern_charuco_board.py
demos/: find_pose.py
demos/camera_info/build_in/calibration/: coefficients.toml
demos/dtt_config/: aruco_marker_bat_socket_ccs.yaml  aruco_pattern_7x_asym.yaml  aruco_pattern_asym.yaml  aruco_pattern_battery_station.yaml  aruco_pattern_car_socket_ccs.yaml
